Added some slight organization (basic tags for endpoints).
