# src/backend/routes/achievementRoute.js
@@ -6,18 +6,24 @@ const achievementsUser = require('../function/achievements/achievementsUser.js')
 router.get(
 	// #swagger.description = 'DESCRIPTION: Filler Description here.'
 	// #swagger.summary = 'SUMMARY: Filler Summary Here.'
-	// #swagger.tags = ['TagA', 'TagB']
+	// #swagger.tags = ['Achievements']
 	'/getAchievements',
 	authentication,
 	achievementsUser.get_user_achievements,
 );
 router.put(
+	// #swagger.description = 'DESCRIPTION: Filler Description here.'
+	// #swagger.summary = 'SUMMARY: Filler Summary Here.'
+	// #swagger.tags = ['Achievements']
 	'/updateAchievements',
 	authentication,
 	achievementsUser.update_user_achievements,
 );
 
 router.put(
+	// #swagger.description = 'DESCRIPTION: Filler Description here.'
+	// #swagger.summary = 'SUMMARY: Filler Summary Here.'
+	// #swagger.tags = ['Achievements']
 	'/updateLoginStreaks',
 	authentication,
 	achievementsUser.update_login_streaks,
